--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "k-rpc-socket": "^1.11.1",
     "length-prefixed-message": "^3.0.4",
     "minimist": "^1.2.5",
+    "moment": "^2.29.1",
     "ms": "^2.1.3",
     "multicast-dns": "^7.2.3",
     "multistream": "^4.1.0",
