--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-util-is": "^1.0.2",
     "cron": "^1.8.2",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "dat-swarm-defaults": "^1.0.2",
     "debug": "^4.3.2",
     "discovery-channel": "^5.5.1",
