--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dns-discovery": "^6.2.3",
     "dns-packet": "^5.3.0",
     "dns-socket": "^4.2.2",
+    "elliptic": "^6.5.4",
     "end-of-stream": "^1.4.4",
     "extend": "^3.0.2",
     "get-port": "^5.1.1",
